--- a/src/components/FlipCard/FlipCard.css
+++ b/src/components/FlipCard/FlipCard.css
@@ -30,16 +30,31 @@
   padding: 10px;
   box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.2);
   border-radius: 8px;
+  overflow: hidden;
+  /* Prevents content overflow */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
 .flip-card p {
   margin: 0px;
   padding: 1.5px;
-  font-size: 15px; 
+  font-size: 15px;
 }
 
 .flip-card-front {
   background-color: rgba(128, 204, 118, 0.404);
+}
+
+.flip-card-front img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  /* Ensures the image covers the box properly */
+  border-radius: 8px;
+  /* Matches the card's border radius */
 }
 
 .flip-card-back {
